// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Byline renders correctly with authors and links 1`] = `
<DocumentFragment>
  .emotion-25 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  height: 100%;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 {
  margin-right: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-9 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-7 {
  border-style: solid;
  border-color: #cccccc;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-5 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-5 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-5:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-5:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-5:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-5:visited:not(:disabled) {
  color: #903D91;
}

.emotion-5:visited:not(:disabled) svg {
  fill: #903D91;
  color: #903D91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-5 {
    vertical-align: text-bottom;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-2 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  display: inline-block;
}

<ul
    class="emotion-25"
  >
    <li
      class="emotion-13"
    >
      <div
        class="emotion-12"
      >
        <div
          class="emotion-11"
        >
          <div
            class="emotion-10"
          >
            <div
              class="emotion-6"
            >
              <a
                aria-label="more by Jane Smith"
                class="emotion-5"
                data-author="Jane Smith"
                href="www.example.com"
                rel="author"
                title="more by Jane Smith"
              >
                <span
                  class="emotion-4"
                >
                  <span
                    class="emotion-1"
                  >
                    <span
                      class="emotion-0"
                    >
                      Jane Smith
                    </span>
                  </span>
                  <span
                    class="emotion-1"
                  >
                    <svg
                      aria-labelledby="mock-bui-1"
                      class="emotion-2"
                      viewBox="0 0 24 24"
                    >
                      <title
                        id="mock-bui-1"
                      >
                        External link
                      </title>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      />
                    </svg>
                  </span>
                </span>
              </a>
            </div>
            <div
              class="emotion-9"
            >
              <div
                class="emotion-6"
              >
                <hr
                  class="emotion-7"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-13"
    >
      <div
        class="emotion-12"
      >
        <div
          class="emotion-11"
        >
          <div
            class="emotion-10"
          >
            <div
              class="emotion-10"
            >
              <a
                aria-label="more by John Smith"
                class="emotion-5"
                data-author="John Smith"
                href="www.example.com"
                rel="author"
                title="more by John Smith"
              >
                <span
                  class="emotion-4"
                >
                  <span
                    class="emotion-1"
                  >
                    <span
                      class="emotion-0"
                    >
                      John Smith
                    </span>
                  </span>
                  <span
                    class="emotion-1"
                  >
                    <svg
                      aria-labelledby="mock-bui-1"
                      class="emotion-2"
                      viewBox="0 0 24 24"
                    >
                      <title
                        id="mock-bui-1"
                      >
                        External link
                      </title>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      />
                    </svg>
                  </span>
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Byline renders correctly with authors and titles 1`] = `
<DocumentFragment>
  .emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  height: 100%;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  white-space: pre;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-4 {
  margin-right: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-7 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5 {
  border-style: solid;
  border-color: #cccccc;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

<ul
    class="emotion-20"
  >
    <li
      class="emotion-11"
    >
      <div
        class="emotion-10"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            >
              Jane Smith, 
            </span>
          </div>
        </div>
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <div
              class="emotion-4"
            >
              <span
                class="emotion-0"
              >
                Author
              </span>
            </div>
            <div
              class="emotion-7"
            >
              <div
                class="emotion-4"
              >
                <hr
                  class="emotion-5"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-11"
    >
      <div
        class="emotion-10"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            >
              John Smith, 
            </span>
          </div>
        </div>
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            >
              Other Author
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Byline renders correctly with authors, location, titles and links 1`] = `
<DocumentFragment>
  .emotion-40 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  height: 100%;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  white-space: pre;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-14 {
  margin-right: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-17 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-15 {
  border-style: solid;
  border-color: #cccccc;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-5 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-5 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-5:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-5:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-5:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-5:visited:not(:disabled) {
  color: #903D91;
}

.emotion-5:visited:not(:disabled) svg {
  fill: #903D91;
  color: #903D91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-5 {
    vertical-align: text-bottom;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-2 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  display: inline-block;
}

<ul
    class="emotion-40"
  >
    <li
      class="emotion-21"
    >
      <div
        class="emotion-20"
      >
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-7"
            >
              <a
                aria-label="more by Jane Smith"
                class="emotion-5"
                data-author="Jane Smith"
                href="www.example.com"
                rel="author"
                title="Author"
              >
                <span
                  class="emotion-4"
                >
                  <span
                    class="emotion-1"
                  >
                    <span
                      class="emotion-0"
                    >
                      Jane Smith
                    </span>
                  </span>
                  <span
                    class="emotion-1"
                  >
                    <svg
                      aria-labelledby="mock-bui-1"
                      class="emotion-2"
                      viewBox="0 0 24 24"
                    >
                      <title
                        id="mock-bui-1"
                      >
                        External link
                      </title>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      />
                    </svg>
                  </span>
                </span>
              </a>
              <span
                class="emotion-6"
              >
                , 
              </span>
            </div>
          </div>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <span
              class="emotion-6"
            >
              Author, 
            </span>
          </div>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-14"
            >
              <span
                class="emotion-6"
              >
                London
              </span>
            </div>
            <div
              class="emotion-17"
            >
              <div
                class="emotion-14"
              >
                <hr
                  class="emotion-15"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-21"
    >
      <div
        class="emotion-20"
      >
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-7"
            >
              <a
                aria-label="more by John Smith"
                class="emotion-5"
                data-author="John Smith"
                href="www.example.com"
                rel="author"
                title="Other Author"
              >
                <span
                  class="emotion-4"
                >
                  <span
                    class="emotion-1"
                  >
                    <span
                      class="emotion-0"
                    >
                      John Smith
                    </span>
                  </span>
                  <span
                    class="emotion-1"
                  >
                    <svg
                      aria-labelledby="mock-bui-1"
                      class="emotion-2"
                      viewBox="0 0 24 24"
                    >
                      <title
                        id="mock-bui-1"
                      >
                        External link
                      </title>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      />
                    </svg>
                  </span>
                </span>
              </a>
              <span
                class="emotion-6"
              >
                , 
              </span>
            </div>
          </div>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <span
              class="emotion-6"
            >
              Other Author, 
            </span>
          </div>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <span
              class="emotion-6"
            >
              London
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Byline renders correctly with multiple authors 1`] = `
<DocumentFragment>
  .emotion-23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  height: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  white-space: pre;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-1 {
  margin-right: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  border-style: solid;
  border-color: #cccccc;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

<ul
    class="emotion-23"
  >
    <li
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                Jane Smith
              </span>
            </div>
            <div
              class="emotion-4"
            >
              <div
                class="emotion-1"
              >
                <hr
                  class="emotion-2"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                John Smith
              </span>
            </div>
            <div
              class="emotion-4"
            >
              <div
                class="emotion-1"
              >
                <hr
                  class="emotion-2"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-5"
          >
            <span
              class="emotion-0"
            >
              Sam Smith
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Byline renders correctly with one author 1`] = `
<DocumentFragment>
  .emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  white-space: pre;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-5"
  >
    <li
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            >
              Jane Smith
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Byline renders correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-17 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-2 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  display: inline-block;
}

.emotion-40 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-12px/2);
  margin-bottom: calc(-12px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(12px/2);
  margin-bottom: calc(12px/2);
  height: 100%;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-12px/2);
  margin-bottom: calc(-12px/2);
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(12px/2);
  margin-bottom: calc(12px/2);
}

.emotion-5 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #f000dc;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-5 {
    vertical-align: text-bottom;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #f000dc;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  white-space: pre;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-14 {
  margin-right: 12px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-15 {
  border-style: solid;
  border-color: #de7818;
  border-width: 2px;
  border-width: 0px;
  margin: 0;
  border-left-width: 2px;
  display: inline-block;
  height: 100%;
}

<ul
    class="emotion-40"
  >
    <li
      class="emotion-21"
    >
      <div
        class="emotion-20"
      >
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-7"
            >
              <a
                aria-label="more by Jane Smith"
                class="emotion-5"
                data-author="Jane Smith"
                href="www.example.com"
                rel="author"
                title="Author"
              >
                <span
                  class="emotion-4"
                >
                  <span
                    class="emotion-1"
                  >
                    <span
                      class="emotion-0"
                    >
                      Jane Smith
                    </span>
                  </span>
                  <span
                    class="emotion-1"
                  >
                    <svg
                      aria-labelledby="mock-bui-1"
                      class="emotion-2"
                      viewBox="0 0 24 24"
                    >
                      <title
                        id="mock-bui-1"
                      >
                        External link
                      </title>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      />
                    </svg>
                  </span>
                </span>
              </a>
              <span
                class="emotion-6"
              >
                , 
              </span>
            </div>
          </div>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <span
              class="emotion-6"
            >
              Author, 
            </span>
          </div>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-14"
            >
              <span
                class="emotion-6"
              >
                London
              </span>
            </div>
            <div
              class="emotion-17"
            >
              <div
                class="emotion-14"
              >
                <hr
                  class="emotion-15"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-21"
    >
      <div
        class="emotion-20"
      >
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-7"
            >
              <a
                aria-label="more by John Smith"
                class="emotion-5"
                data-author="John Smith"
                href="www.example.com"
                rel="author"
                title="Other Author"
              >
                <span
                  class="emotion-4"
                >
                  <span
                    class="emotion-1"
                  >
                    <span
                      class="emotion-0"
                    >
                      John Smith
                    </span>
                  </span>
                  <span
                    class="emotion-1"
                  >
                    <svg
                      aria-labelledby="mock-bui-1"
                      class="emotion-2"
                      viewBox="0 0 24 24"
                    >
                      <title
                        id="mock-bui-1"
                      >
                        External link
                      </title>
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      />
                    </svg>
                  </span>
                </span>
              </a>
              <span
                class="emotion-6"
              >
                , 
              </span>
            </div>
          </div>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <span
              class="emotion-6"
            >
              Other Author, 
            </span>
          </div>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="emotion-7"
          >
            <span
              class="emotion-6"
            >
              London
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
